# op3_zmp_locomotion

kdl_3dof_planar_man/: CMakeLists.txt  README  package.xml
kdl_3dof_planar_man/src/: 3dof_planar_man.cpp  3dof_planar_man.h  3dof_planar_man_server.h  ik_server.cpp  main.cpp  planar_man_services.cpp  planar_man_services.h
kdl_3dof_planar_man/srv/: FKServer.srv  FK_empty.srv  IKServer.srv  SetInitServer.srv
op3_kdl_ik/: CMakeLists.txt  package.xml
op3_kdl_ik/src/: main.cpp  op3_kdl_move_pelvis.cpp  op3_kdl_move_pelvis.h
op3_keyboard_control/: CMakeLists.txt  package.xml
op3_keyboard_control/src/: main.cpp
op3_quasistatic_locomotion/: CMakeLists.txt  package.xml
op3_quasistatic_locomotion/src/: main.cpp  op3_leg_chains.cpp  op3_quasistatic_locomotion.cpp  op3_quasistatic_locomotion.h
op3_robot_zmp_quasistatic/: CMakeLists.txt  package.xml
op3_robot_zmp_quasistatic/src/: main.cpp  op3_leg_chains.cpp  op3_zmp_quasistatic.cpp  op3_zmp_quasistatic.h
op3_zmp_inv_kin/: CMakeLists.txt  package.xml
op3_zmp_inv_kin/src/: main.cpp  op3_leg_chains.cpp  op3_zmp_inv_kin.cpp  op3_zmp_inv_kin.h
op3_zmp_locomotion/: CMakeLists.txt  package.xml
op3_zmp_locomotion/src/: main.cpp  op3_comtranslation.cpp  op3_left_leg_chain.cpp  op3_legswing.cpp  op3_right_leg_chain.cpp  op3_set_init_pose.cpp  op3_zmp_locomotion.cpp  op3_zmp_locomotion.h
op3_zmp_quasistatic/: CMakeLists.txt  package.xml
op3_zmp_quasistatic/src/: main.cpp  op3_zmp_inv_kin.cpp  op3_zmp_quasistatic.cpp  op3_zmp_quasistatic.h  op3_zmp_quasistatic_service.cpp  op3_zmp_quasistatic_service.h
(+21 files in other folders)
